Closed
Bug 660081
Opened 14 years ago
Closed 14 years ago
TI: correctness bug with x && arguments
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
--
(function() { "length" in (true && arguments); })()
--
With -n -a this throws:
typein:1: TypeError: invalid 'in' operand undefined
Revision 1252c464553e, 32-bit OS X.
| Reporter | ||
Updated•14 years ago
|
Summary: TI+JM: correctness bug with x && arguments → TI: correctness bug with x && arguments
Comment 1•14 years ago
|
||
Braindead bug, when analyzing whether a use of 'arguments' escapes and seeing it flow to a phi node, we would analyze the uses of the components of the phi rather than the phi itself.
http://hg.mozilla.org/projects/jaegermonkey/rev/0f02561d061c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•