[INFER] Follow uses of phi node itself, not its components, when checking for escaping arguments, bug 660081.